[package]
name = "json_path_tester"
version = "0.1.0"
edition = "2021"
authors = ["Trevor Hilton"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
serde_json = "1.0.93"
serde_json_path = "0.3.1"
